fix(clear-queue-modal): apply responsive layout fix to clear queue modal only on small screens

--- a/packages/esm-service-queues-app/src/modals/clear-queue-entries-modal/clear-queue-entries.scss
+++ b/packages/esm-service-queues-app/src/modals/clear-queue-entries-modal/clear-queue-entries.scss
@@ -12,7 +12,7 @@
 }
 
 @media (max-width: 41.9375rem) {
-  :global(.cds--modal-container) {
+  :global(.clear-queue-modal-container) {
     position: fixed !important;
     top: 0 !important;
     bottom: 0 !important;
